Update log parsers API
