# chronosphere/pkg/configunstable/models/configunstable_create_azure_metrics_integration_response.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ConfigunstableCreateAzureMetricsIntegrationResponse configunstable create azure metrics integration response
+//
+// swagger:model configunstableCreateAzureMetricsIntegrationResponse
+type ConfigunstableCreateAzureMetricsIntegrationResponse struct {
+
+	// azure metrics integration
+	AzureMetricsIntegration *ConfigunstableAzureMetricsIntegration `json:"azure_metrics_integration,omitempty"`
+}
+
+// Validate validates this configunstable create azure metrics integration response
+func (m *ConfigunstableCreateAzureMetricsIntegrationResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAzureMetricsIntegration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigunstableCreateAzureMetricsIntegrationResponse) validateAzureMetricsIntegration(formats strfmt.Registry) error {
+	if swag.IsZero(m.AzureMetricsIntegration) { // not required
+		return nil
+	}
+
+	if m.AzureMetricsIntegration != nil {
+		if err := m.AzureMetricsIntegration.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("azure_metrics_integration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("azure_metrics_integration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this configunstable create azure metrics integration response based on the context it is used
+func (m *ConfigunstableCreateAzureMetricsIntegrationResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAzureMetricsIntegration(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigunstableCreateAzureMetricsIntegrationResponse) contextValidateAzureMetricsIntegration(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.AzureMetricsIntegration != nil {
+		if err := m.AzureMetricsIntegration.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("azure_metrics_integration")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("azure_metrics_integration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ConfigunstableCreateAzureMetricsIntegrationResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ConfigunstableCreateAzureMetricsIntegrationResponse) UnmarshalBinary(b []byte) error {
+	var res ConfigunstableCreateAzureMetricsIntegrationResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
