# chronosphere/pkg/configunstable/swagger.json
@@ -3,6 +3,61 @@
     "application/json"
   ],
   "definitions": {
+    "AzureMetricsIntegrationAzurePrincipal": {
+      "properties": {
+        "tenant_id": {
+          "description": "Specifies the ID of the Azure tenant that hosts the managed identity principal.",
+          "type": "string"
+        },
+        "client_id": {
+          "description": "Specifies the OAuth2 client ID of the managed identity principal.",
+          "type": "string"
+        }
+      },
+      "type": "object"
+    },
+    "AzureMetricsIntegrationAzureResourceType": {
+      "properties": {
+        "name": {
+          "description": "Name of the resource type.",
+          "type": "string"
+        },
+        "metric_names": {
+          "description": "List of metric names to be targeted (these apply to this resource type; use empty for all metrics).",
+          "items": {
+            "type": "string"
+          },
+          "type": "array"
+        }
+      },
+      "type": "object"
+    },
+    "AzureMetricsIntegrationAzureScrapeConfig": {
+      "properties": {
+        "subscription_ids": {
+          "description": "Subscriptions to be targeted for this integration (use empty for all subscriptions).",
+          "items": {
+            "type": "string"
+          },
+          "type": "array"
+        },
+        "locations": {
+          "description": "Locations to be ingested for this integration (these apply to all subscriptions; use empty for all locations).",
+          "items": {
+            "type": "string"
+          },
+          "type": "array"
+        },
+        "resource_types": {
+          "description": "Metric groups to be ingested for this integration.",
+          "items": {
+            "$ref": "#/definitions/AzureMetricsIntegrationAzureResourceType"
+          },
+          "type": "array"
+        }
+      },
+      "type": "object"
+    },
     "BehaviorAction": {
       "enum": [
         "ALERT_WARN",
@@ -63,6 +118,22 @@
         },
         "team_slug": {
           "type": "string"
+        }
+      },
+      "type": "object"
+    },
+    "ConfigUnstableUpdateAzureMetricsIntegrationBody": {
+      "properties": {
+        "azure_metrics_integration": {
+          "$ref": "#/definitions/configunstableAzureMetricsIntegration"
+        },
+        "create_if_missing": {
+          "description": "If `true`, the AzureMetricsIntegration will be created if it does not already exist, identified by `slug`. If `false`, an error will be returned if the AzureMetricsIntegration does not already exist.",
+          "type": "boolean"
+        },
+        "dry_run": {
+          "description": "If `true`, the AzureMetricsIntegration isn't created or updated, and no response AzureMetricsIntegration will be returned. The response will return an error if the given AzureMetricsIntegration is invalid.",
+          "type": "boolean"
         }
       },
       "type": "object"
@@ -743,6 +814,53 @@
       },
       "type": "object"
     },
+    "configunstableAzureMetricsIntegration": {
+      "properties": {
+        "slug": {
+          "description": "Unique identifier of the AzureMetricsIntegration. If a `slug` isn't provided, one will be generated based of the `name` field. You can't modify this field after the AzureMetricsIntegration is created.",
+          "type": "string"
+        },
+        "name": {
+          "description": "Name of the AzureMetricsIntegration. You can modify this value after the AzureMetricsIntegration is created.",
+          "type": "string"
+        },
+        "created_at": {
+          "description": "Timestamp of when the AzureMetricsIntegration was created. Cannot be set by clients.",
+          "format": "date-time",
+          "readOnly": true,
+          "type": "string"
+        },
+        "updated_at": {
+          "description": "Timestamp of when the AzureMetricsIntegration was last updated. Cannot be set by clients.",
+          "format": "date-time",
+          "readOnly": true,
+          "type": "string"
+        },
+        "principal": {
+          "$ref": "#/definitions/AzureMetricsIntegrationAzurePrincipal"
+        },
+        "scrape_configs": {
+          "description": "Specifies the scrape configs for this integration.",
+          "items": {
+            "$ref": "#/definitions/AzureMetricsIntegrationAzureScrapeConfig"
+          },
+          "type": "array"
+        },
+        "count_metrics_enabled": {
+          "description": "Enables Azure count metrics for the configured resources.",
+          "type": "boolean"
+        },
+        "usage_metrics_enabled": {
+          "description": "Enables collection of azure usage metrics under this principal (Microsoft.Compute, Microsoft.Network, Microsoft.Storage).",
+          "type": "boolean"
+        },
+        "propagate_tags": {
+          "description": "Specifies whether Azure resource, group, and subscription tags should be propagated as metric labels.",
+          "type": "boolean"
+        }
+      },
+      "type": "object"
+    },
     "configunstableConsumptionBudget": {
       "properties": {
         "slug": {
@@ -817,6 +935,26 @@
             "$ref": "#/definitions/ConsumptionConfigPartition"
           },
           "type": "array"
+        }
+      },
+      "type": "object"
+    },
+    "configunstableCreateAzureMetricsIntegrationRequest": {
+      "properties": {
+        "azure_metrics_integration": {
+          "$ref": "#/definitions/configunstableAzureMetricsIntegration"
+        },
+        "dry_run": {
+          "description": "If `true`, the AzureMetricsIntegration isn't created, and no response AzureMetricsIntegration will be returned. The response will return an error if the given AzureMetricsIntegration is invalid.",
+          "type": "boolean"
+        }
+      },
+      "type": "object"
+    },
+    "configunstableCreateAzureMetricsIntegrationResponse": {
+      "properties": {
+        "azure_metrics_integration": {
+          "$ref": "#/definitions/configunstableAzureMetricsIntegration"
         }
       },
       "type": "object"
@@ -1107,6 +1245,9 @@
       },
       "type": "object"
     },
+    "configunstableDeleteAzureMetricsIntegrationResponse": {
+      "type": "object"
+    },
     "configunstableDeleteConsumptionBudgetResponse": {
       "type": "object"
     },
@@ -1177,6 +1318,20 @@
         "ui_component": {
           "description": "Link template is scoped to the specified string representing a UI component here.",
           "type": "string"
+        }
+      },
+      "type": "object"
+    },
+    "configunstableListAzureMetricsIntegrationsResponse": {
+      "properties": {
+        "page": {
+          "$ref": "#/definitions/configv1PageResult"
+        },
+        "azure_metrics_integrations": {
+          "items": {
+            "$ref": "#/definitions/configunstableAzureMetricsIntegration"
+          },
+          "type": "array"
         }
       },
       "type": "object"
@@ -1394,6 +1549,14 @@
         },
         "metric": {
           "$ref": "#/definitions/ObjectDiscoveryRuleMetricRule"
+        }
+      },
+      "type": "object"
+    },
+    "configunstableReadAzureMetricsIntegrationResponse": {
+      "properties": {
+        "azure_metrics_integration": {
+          "$ref": "#/definitions/configunstableAzureMetricsIntegration"
         }
       },
       "type": "object"
@@ -1725,6 +1888,14 @@
       },
       "type": "object"
     },
+    "configunstableUpdateAzureMetricsIntegrationResponse": {
+      "properties": {
+        "azure_metrics_integration": {
+          "$ref": "#/definitions/configunstableAzureMetricsIntegration"
+        }
+      },
+      "type": "object"
+    },
     "configunstableUpdateConsumptionBudgetResponse": {
       "properties": {
         "consumption_budget": {
@@ -1943,6 +2114,265 @@
     "version": "UNSTABLE"
   },
   "paths": {
+    "/api/unstable/config/azure-metrics-integrations": {
+      "get": {
+        "operationId": "ListAzureMetricsIntegrations",
+        "parameters": [
+          {
+            "description": "Page size preference (i.e. how many items are returned in the next\npage). If zero, the server will use a default. Regardless of what size\nis given, clients must never assume how many items will be returned.",
+            "format": "int64",
+            "in": "query",
+            "name": "page.max_size",
+            "type": "integer"
+          },
+          {
+            "description": "Opaque page token identifying which page to request. An empty token\nidentifies the first page.",
+            "in": "query",
+            "name": "page.token",
+            "type": "string"
+          },
+          {
+            "collectionFormat": "multi",
+            "description": "Filters results by slug, where any AzureMetricsIntegration with a matching slug in the given list (and matches all other filters) is returned.",
+            "in": "query",
+            "items": {
+              "type": "string"
+            },
+            "name": "slugs",
+            "type": "array"
+          },
+          {
+            "collectionFormat": "multi",
+            "description": "Filters results by name, where any AzureMetricsIntegration with a matching name in the given list (and matches all other filters) is returned.",
+            "in": "query",
+            "items": {
+              "type": "string"
+            },
+            "name": "names",
+            "type": "array"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/configunstableListAzureMetricsIntegrationsResponse"
+            }
+          },
+          "500": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "default": {
+            "description": "An undefined error response.",
+            "schema": {
+              "$ref": "#/definitions/genericError"
+            }
+          }
+        },
+        "tags": [
+          "AzureMetricsIntegration"
+        ]
+      },
+      "post": {
+        "operationId": "CreateAzureMetricsIntegration",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/configunstableCreateAzureMetricsIntegrationRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response containing the created AzureMetricsIntegration.",
+            "schema": {
+              "$ref": "#/definitions/configunstableCreateAzureMetricsIntegrationResponse"
+            }
+          },
+          "400": {
+            "description": "Cannot create the AzureMetricsIntegration because the request is invalid.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "409": {
+            "description": "Cannot create the AzureMetricsIntegration because there is a conflict with an existing AzureMetricsIntegration.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "500": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "default": {
+            "description": "An undefined error response.",
+            "schema": {
+              "$ref": "#/definitions/genericError"
+            }
+          }
+        },
+        "tags": [
+          "AzureMetricsIntegration"
+        ]
+      }
+    },
+    "/api/unstable/config/azure-metrics-integrations/{slug}": {
+      "delete": {
+        "operationId": "DeleteAzureMetricsIntegration",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "slug",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/configunstableDeleteAzureMetricsIntegrationResponse"
+            }
+          },
+          "400": {
+            "description": "Cannot delete the AzureMetricsIntegration because it is in use.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "404": {
+            "description": "Cannot delete the AzureMetricsIntegration because the slug does not exist.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "500": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "default": {
+            "description": "An undefined error response.",
+            "schema": {
+              "$ref": "#/definitions/genericError"
+            }
+          }
+        },
+        "tags": [
+          "AzureMetricsIntegration"
+        ]
+      },
+      "get": {
+        "operationId": "ReadAzureMetricsIntegration",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "slug",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/configunstableReadAzureMetricsIntegrationResponse"
+            }
+          },
+          "404": {
+            "description": "Cannot read the AzureMetricsIntegration because the slug does not exist.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "500": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "default": {
+            "description": "An undefined error response.",
+            "schema": {
+              "$ref": "#/definitions/genericError"
+            }
+          }
+        },
+        "tags": [
+          "AzureMetricsIntegration"
+        ]
+      },
+      "put": {
+        "operationId": "UpdateAzureMetricsIntegration",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "slug",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ConfigUnstableUpdateAzureMetricsIntegrationBody"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response containing the updated AzureMetricsIntegration.",
+            "schema": {
+              "$ref": "#/definitions/configunstableUpdateAzureMetricsIntegrationResponse"
+            }
+          },
+          "400": {
+            "description": "Cannot update the AzureMetricsIntegration because the request is invalid.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "404": {
+            "description": "Cannot update the AzureMetricsIntegration because the slug does not exist.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "409": {
+            "description": "Cannot update the AzureMetricsIntegration because there is a conflict with an existing AzureMetricsIntegration.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "500": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/apiError"
+            }
+          },
+          "default": {
+            "description": "An undefined error response.",
+            "schema": {
+              "$ref": "#/definitions/genericError"
+            }
+          }
+        },
+        "tags": [
+          "AzureMetricsIntegration"
+        ]
+      }
+    },
     "/api/unstable/config/consumption-budgets": {
       "get": {
         "operationId": "ListConsumptionBudgets",
